[gd_scene load_steps=15 format=3 uid="uid://4pm656trduls"]

[ext_resource type="Script" uid="uid://dichgsh28wgqw" path="res://scenes/UI/title_screen_ui.gd" id="1_egfx5"]
[ext_resource type="Texture2D" uid="uid://6gubnod0a28l" path="res://assets/graphics/ui elements/UI elements.png" id="1_hn04l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_egfx5"]
atlas = ExtResource("1_hn04l")
region = Rect2(0, 0, 94, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwwcf"]
atlas = ExtResource("1_hn04l")
region = Rect2(94, 0, 94, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfh0t"]
atlas = ExtResource("1_hn04l")
region = Rect2(0, 31, 47, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cv73"]
atlas = ExtResource("1_hn04l")
region = Rect2(47, 31, 47, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_on0i6"]
atlas = ExtResource("1_hn04l")
region = Rect2(94, 31, 47, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiv0i"]
atlas = ExtResource("1_hn04l")
region = Rect2(141, 31, 47, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_joti5"]
atlas = ExtResource("1_hn04l")
region = Rect2(188, 0, 94, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_c62eg"]
atlas = ExtResource("1_hn04l")
region = Rect2(282, 0, 94, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pk4w"]
atlas = ExtResource("1_hn04l")
region = Rect2(188, 62, 47, 31)

[sub_resource type="Animation" id="Animation_8pk4w"]
resource_name = "open_SettingsDialog"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsDialog/NinePatchRect:custom_minimum_size:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SettingsDialog/NinePatchRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SettingsDialog/NinePatchRect/MarginContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.033333335, 0.8333333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="Animation" id="Animation_g4027"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SettingsDialog/NinePatchRect/MarginContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ktavn"]
_data = {
&"RESET": SubResource("Animation_g4027"),
&"open_SettingsDialog": SubResource("Animation_8pk4w")
}

[node name="TitleScreenUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_egfx5")

[node name="BottomButtons" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="NinePatchRect" type="NinePatchRect" parent="BottomButtons"]
layout_mode = 2
texture = ExtResource("1_hn04l")
region_rect = Rect2(282, 0, 94, 62)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="BottomButtons/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.5
offset_top = -15.5
offset_right = 72.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="TextureButton" parent="BottomButtons/NinePatchRect/HBoxContainer"]
custom_minimum_size = Vector2(94, 31)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_egfx5")
texture_pressed = SubResource("AtlasTexture_nwwcf")

[node name="SettingsButton" type="TextureButton" parent="BottomButtons/NinePatchRect/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_sfh0t")
texture_pressed = SubResource("AtlasTexture_5cv73")

[node name="TopButtons" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 265
theme_override_constants/margin_top = 3

[node name="HelpButton" type="TextureButton" parent="TopButtons"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_on0i6")
texture_pressed = SubResource("AtlasTexture_hiv0i")

[node name="HelpDialog" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_right = 40.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/margin_top = 25

[node name="NinePatchRect" type="NinePatchRect" parent="HelpDialog"]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_joti5")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="SettingsDialog" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 25

[node name="NinePatchRect" type="NinePatchRect" parent="SettingsDialog"]
custom_minimum_size = Vector2(0, 96.89655)
layout_mode = 2
texture = SubResource("AtlasTexture_c62eg")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="SettingsDialog/NinePatchRect"]
visible = false
custom_minimum_size = Vector2(170, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsDialog/NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsDialog/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="SettingsDialog/NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_8pk4w")

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsDialog/NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ktavn")
}

[connection signal="pressed" from="BottomButtons/NinePatchRect/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TopButtons/HelpButton" to="." method="_on_help_button_pressed"]
